--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scene/blue_bubble.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/win_loss_canvas_layer.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://Sounds/", "res://scripts/", "res://scene/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 <<<<<<<Updatedupstreamopen_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://scene/win_loss_canvas_layer.tscn"
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/platform_tile.tscn", "res://scene/mc.tscn", "res://scene/bad.tscn", "res://scene/platforms.tscn", "res://scene/blue_bubble.tscn")
-current_scene="res://levels/level1.tscn"
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/platform_tile.tscn", "res://scene/mc.tscn", "res://scene/bad.tscn", "res://scene/blue_bubble.tscn", "res://scene/win_loss_canvas_layer.tscn")
+current_scene="res://scene/win_loss_canvas_layer.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/platform_tile.gd"]
-selected_script="res://scripts/blue_bubble.gd"
+open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/platform_tile.gd", "res://scene/win_loss_canvas_layer.gd"]
+selected_script="res://scene/win_loss_canvas_layer.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
