--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,61 +2,43 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-1210
+dock_hsplit_2=270
+dock_hsplit_3=-270
 dock_hsplit_4=0
-dock_filesystem_h_split_offset=480
+dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-<<<<<<< Updated upstream
-dock_filesystem_selected_paths=PackedStringArray("res://scene/win_loss_canvas_layer.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://Sounds/", "res://scripts/", "res://scene/")
-=======
-dock_filesystem_selected_paths=PackedStringArray("res://scene/ground.tscn")
+<<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://scene/win_loss_canvas_layer.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scene/", "res://levels/")
->>>>>>> Stashed changes
+dock_filesystem_selected_paths=PackedStringArray("res://scene/blue_bubble.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-<<<<<<<Updatedupstreamopen_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn")
-<<<<<<<Updatedupstreamcurrent_scene="res://scene/win_loss_canvas_layer.tscn"
-<<<<<<< Updated upstream
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/platform_tile.tscn", "res://scene/mc.tscn", "res://scene/bad.tscn", "res://scene/blue_bubble.tscn", "res://scene/win_loss_canvas_layer.tscn")
-current_scene="res://scene/win_loss_canvas_layer.tscn"
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/blue_bubble.tscn", "res://scene/mc.tscn")
+current_scene="res://levels/level1.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-=======
-open_scenes=PackedStringArray("res://scene/trapped_bad.tscn", "res://scene/bad.tscn", "res://scene/mc.tscn", "res://scene/main.tscn")
-current_scene="res://scene/trapped_bad.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=1
->>>>>>> Stashed changes
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-<<<<<<< Updated upstream
-open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/platform_tile.gd", "res://scene/win_loss_canvas_layer.gd"]
-selected_script="res://scene/win_loss_canvas_layer.gd"
-=======
-open_scripts=["res://scripts/bad.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/ground.gd", "res://scripts/platform_tile.gd", "res://scripts/trapped_bad.gd", "res://scene/win_loss_canvas_layer.gd"]
-selected_script="res://scripts/trapped_bad.gd"
->>>>>>> Stashed changes
+open_scripts=["res://scripts/blue_bubble.gd", "res://scripts/character_body_2d_2.gd"]
+selected_script="res://scripts/character_body_2d_2.gd"
 open_help=[]
-script_split_offset=140
+script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
 
@@ -66,3 +48,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=false
+log_filter_2=false
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
