--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=573
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -19,15 +19,15 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://scene/win_loss_canvas_layer.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://scripts/", "res://scene/", "res://levels/")
-dock_filesystem_selected_paths=PackedStringArray("res://scene/finish_line.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/mc.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/trapped_bad.tscn", "res://scene/ground.tscn", "res://scene/large_ground.tscn", "res://scene/bad.tscn", "res://scene/goal.tscn", "res://scene/blue_bubble.tscn", "res://scene/platform_tile.tscn", "res://scene/finish_line.tscn")
-current_scene="res://levels/level1.tscn"
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/trapped_bad.tscn", "res://scene/ground.tscn", "res://scene/large_ground.tscn", "res://scene/frog.tscn", "res://scene/goal.tscn", "res://scene/blue_bubble.tscn", "res://scene/platform_tile.tscn", "res://scene/finish_line.tscn", "res://scene/crab.tscn", "res://scene/waterbug.tscn", "res://scene/bird.tscn")
+current_scene="res://scene/mc.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/platform_tile.gd", "res://scripts/trapped_bad.gd"]
-selected_script="res://scripts/platform_tile.gd"
+selected_script="res://scripts/bad.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
