--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,7 +6,7 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=-358
+dock_split_2=-360
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=573
@@ -19,18 +19,18 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://scene/win_loss_canvas_layer.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://scripts/", "res://scene/", "res://levels/")
-dock_filesystem_selected_paths=PackedStringArray("res://levels/level1.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/bird.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/trapped_frog.tscn", "res://scene/ground.tscn", "res://scene/large_ground.tscn", "res://scene/frog.tscn", "res://scene/goal.tscn", "res://scene/blue_bubble.tscn", "res://scene/platform_tile.tscn", "res://scene/finish_line.tscn", "res://scene/waterbug.tscn", "res://scene/bird.tscn", "res://scene/trapped_bird.tscn", "res://scene/trapped_crab.tscn", "res://scene/trapped_waterbug.tscn", "res://scene/crab.tscn")
-current_scene="res://scene/frog.tscn"
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/goal.tscn", "res://scene/blue_bubble.tscn", "res://scene/platform_tile.tscn", "res://scene/finish_line.tscn", "res://scene/trapped_waterbug.tscn", "res://scene/waterbug.tscn", "res://scene/frog.tscn")
+current_scene="res://levels/level1.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
