--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -98,16 +98,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 56,
-"scroll_position": 28.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 46,
-"selection_to_column": 20,
-"selection_to_line": 56,
+"row": 51,
+"scroll_position": 26.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -116,7 +112,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 65,
+"column": 55,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 2,
@@ -158,10 +154,28 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 0,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 1,
+"selection_to_line": 26,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scene/waterbug.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
