--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://scene/win_loss_canvas_layer.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://scene/", "res://levels/")
-dock_filesystem_selected_paths=PackedStringArray("res://scene/blue_bubble.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/trapped_frog.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/goal.tscn", "res://scene/blue_bubble.tscn", "res://scene/platform_tile.tscn", "res://scene/finish_line.tscn", "res://scene/trapped_waterbug.tscn", "res://scene/waterbug.tscn", "res://scene/frog.tscn")
-current_scene="res://scene/blue_bubble.tscn"
+current_scene="res://levels/level1.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bird.gd", "res://scripts/blue_bubble.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/crab.gd", "res://scripts/frog.gd", "res://scripts/platform_tile.gd", "res://scripts/trapped_bad.gd", "res://scripts/waterbug.gd", "res://scene/waterbug.gd"]
+open_scripts=["res://scripts/bird.gd", "res://scripts/blue_bubble.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/crab.gd", "res://scripts/frog.gd", "res://scripts/platform_tile.gd", "res://scripts/trapped_bad.gd", "res://scripts/waterbug.gd"]
 selected_script="res://scripts/blue_bubble.gd"
 open_help=[]
 script_split_offset=70
